[rs-dataprovider] Fix Sonar issues